--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "babel-preset-env": "^1.5.2",
     "babel-register": "^6.24.1",
     "babili-webpack-plugin": "^0.1.2",
-    "cfonts": "^1.1.3",
     "chalk": "^1.1.3",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.1",
@@ -49,10 +48,13 @@
     "electron-devtools-installer": "^2.2.0",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
+    "fork-ts-checker-webpack-plugin": "^0.2.3",
     "html-webpack-plugin": "^2.29.0",
     "json-loader": "^0.5.4",
     "multispinner": "^0.2.1",
     "style-loader": "^0.18.2",
+    "ts-loader": "^2.2.0",
+    "typescript": "^2.4.1",
     "url-loader": "^0.5.9",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^12.2.1",
