typescript for renderer process

--- a/src/main/tsconfig.json
+++ b/src/main/tsconfig.json
@@ -1,15 +1,5 @@
 {
+  "extends": "../tsconfig-base.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es6",
-    "removeComments": true,
-    "newLine": "LF",
-    "inlineSources": true,
-    "sourceMap": true,
-    "strict": true,
-    "moduleResolution": "Node",
-    "noUnusedLocals": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitReturns": true
   }
 }
