--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev": "node .electron-vue/dev-runner.js",
     "pack": "yarn pack:main && yarn pack:renderer",
     "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
-    "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js"
+    "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
+    "vuetype": "vuetype src/renderer"
   },
   "build": {
     "extends": ".electron-vue/electron-builder.yml",
@@ -30,12 +31,10 @@
     "vuex": "^2.3.1"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-component": "^0.9.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.2",
-    "babel-register": "^6.24.1",
     "babili-webpack-plugin": "^0.1.2",
     "chalk": "^1.1.3",
     "copy-webpack-plugin": "^4.0.1",
@@ -60,6 +59,7 @@
     "vue-loader": "^12.2.1",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.4",
+    "vuetype": "^0.2.2",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.5.0",
     "webpack-hot-middleware": "^2.18.0"
