--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   "dependencies": {
     "axios": "^0.16.2",
     "electron-debug": "^1.2.0",
-    "element-ui": "^1.3.7",
+    "iview": "^2.0.0-rc.17",
     "vue": "^2.3.4",
     "vue-electron": "^1.0.6",
-    "vue-router": "^2.6.0",
+    "vue-router": "^2.7.0",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
@@ -45,14 +45,14 @@
     "electron": "1.7.3",
     "electron-builder": "^19.11.0",
     "electron-devtools-installer": "^2.2.0",
-    "extract-text-webpack-plugin": "^2.1.2",
+    "extract-text-webpack-plugin": "^3.0.0-beta.3",
     "file-loader": "^0.11.2",
-    "fork-ts-checker-webpack-plugin": "^0.2.3",
+    "fork-ts-checker-webpack-plugin": "^0.2.4",
     "html-webpack-plugin": "^2.29.0",
     "json-loader": "^0.5.4",
     "multispinner": "^0.2.1",
     "style-loader": "^0.18.2",
-    "ts-loader": "^2.2.0",
+    "ts-loader": "^2.2.1",
     "typescript": "^2.4.1",
     "url-loader": "^0.5.9",
     "vue-html-loader": "^1.2.4",
@@ -60,7 +60,7 @@
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.4",
     "vuetype": "^0.2.2",
-    "webpack": "^2.2.1",
+    "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0",
     "webpack-hot-middleware": "^2.18.0"
   }
