--- a/src/renderer/tsconfig.json
+++ b/src/renderer/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../tsconfig-base.json",
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "allowJs": true
   },
   "include": ["**/*.ts", "*.d.ts"]
 }
