--- a/src/tsconfig-base.json
+++ b/src/tsconfig-base.json
@@ -14,6 +14,9 @@
     "inlineSources": true,
     "sourceMap": true,
 
+    "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
+
     "newLine": "LF"
   }
 }
