--- a/src/renderer/tsconfig.json
+++ b/src/renderer/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../tsconfig-base.json",
   "compilerOptions": {
-    "allowJs": true
+    "allowJs": true,
+    "module": "esnext"
   },
   "include": ["**/*.ts", "*.d.ts", "../rx-ipc/*.ts"]
 }
