electron-builder card

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "bluebird-lst": "^1.0.2",
     "debug": "^2.6.8",
     "electron-debug": "^1.2.0",
+    "electron-store": "^1.2.0",
     "execa": "^0.7.0",
+    "fs-extra-p": "^4.3.0",
     "iview": "^2.0.0-rc.17",
     "vue": "^2.3.4",
     "vue-electron": "^1.0.6",
