--- a/src/main/tsconfig.json
+++ b/src/main/tsconfig.json
@@ -2,5 +2,5 @@
   "extends": "../tsconfig-base.json",
   "compilerOptions": {
   },
-  "include": ["**/*.ts", "../rx-ipc/*.ts"]
+  "include": ["**/*.ts", "../rx-ipc/*.ts", "../common/*.ts"]
 }
