--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
     "build:web": "node .electron-vue/build.js --web",
     "build:clean": "node .electron-vue/build.js --clean",
     "dist": "yarn build && electron-builder",
-    "lint": "tslint -c ./node_modules/electron-builder-tslint-config/tslint.json -p src/renderer",
-    "lintAndFix": "tslint -c ./node_modules/electron-builder-tslint-config/tslint.json -p src/renderer --fix"
+    "lint": "yarn lint:main && yarn lint:renderer",
+    "lint:main": "tslint -c ./node_modules/electron-builder-tslint-config/tslint.json -p src/main --exclude '**/*.js'",
+    "lint:renderer": "tslint -c ./node_modules/electron-builder-tslint-config/tslint.json -p src/renderer --exclude '**/*.js'",
+    "lint:main-fix": "tslint -c ./node_modules/electron-builder-tslint-config/tslint.json -p src/main --exclude '**/*.js' --fix",
+    "lint:renderer-fix": "tslint -c ./node_modules/electron-builder-tslint-config/tslint.json -p src/renderer --exclude '**/*.js' --fix",
+    "lintAndFix": "yarn lint:main-fix && yarn lint:renderer-fix",
+    "test": "tsc -p test && jest",
+    "test-compile": "webpack --progress --colors --config .electron-vue/webpack.test.config.js"
   },
   "build": {
     "extends": ".electron-vue/electron-builder.yml",
@@ -33,13 +39,14 @@
     "vue": "^2.3.4",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.7.0",
+    "vueify": "^9.4.1",
     "xstream": "^10.8.0"
   },
   "devDependencies": {
+    "@types/jest": "^20.0.2",
     "babel-loader": "^7.1.1",
     "babel-plugin-component": "^0.9.1",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.5.2",
     "babili-webpack-plugin": "^0.1.2",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
@@ -47,12 +54,14 @@
     "devtron": "^1.4.0",
     "electron": "1.7.4",
     "electron-builder": "^19.13.0",
-    "electron-builder-tslint-config": "^1.0.0",
+    "electron-builder-tslint-config": "^1.0.1",
     "electron-devtools-installer": "^2.2.0",
     "extract-text-webpack-plugin": "^3.0.0-beta.3",
     "file-loader": "^0.11.2",
     "fork-ts-checker-webpack-plugin": "^0.2.4",
     "html-webpack-plugin": "^2.29.0",
+    "jest-cli": "^20.0.4",
+    "jest-environment-node-debug": "^2.0.0",
     "json-loader": "^0.5.4",
     "multispinner": "^0.2.1",
     "style-loader": "^0.18.2",
@@ -68,5 +77,10 @@
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0",
     "webpack-hot-middleware": "^2.18.1"
+  },
+  "jest": {
+    "roots": [
+      "<rootDir>/test"
+    ]
   }
 }
