chore: use electron-webpack

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ install:
 - yarn
 
 script:
+  - yarn test
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then yarn release; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then yarn release -- --mac --win; fi
 
