--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "author": "Vladimir Krivosheev <develar@gmail.com>",
   "description": "Step-by-step wizard to prepare Electron app for distribution, from packaging to auto-update",
   "license": "MIT",
-  "main": "./dist/electron/main.js",
+  "main": "main.js",
   "scripts": {
-    "dev": "node .electron-vue/dev-runner.js",
-    "build": "node .electron-vue/build.js && electron-builder --dir -c.compression=store",
-    "build:web": "node .electron-vue/build.js --web",
-    "build:clean": "node .electron-vue/build.js --clean",
-    "dist": "yarn build && electron-builder",
+    "dev": "node node_modules/electron-webpack/dev-runner.js",
+    "compile": "webpack --bail --env.production --config node_modules/electron-webpack/webpack.app.config.js",
+    "dist-dir": "yarn compile && electron-builder --dir -c.compression=store -c.mac.identity=null",
+    "dist": "yarn compile && electron-builder",
     "lint": "yarn lint:main && yarn lint:renderer",
     "lint:main": "tslint -c ./node_modules/electron-builder-tslint-config/tslint.json -p src/main --exclude '**/*.js'",
     "lint:renderer": "tslint -c ./node_modules/electron-builder-tslint-config/tslint.json -p src/renderer --exclude '**/*.js'",
@@ -18,12 +17,25 @@
     "lint:renderer-fix": "tslint -c ./node_modules/electron-builder-tslint-config/tslint.json -p src/renderer --exclude '**/*.js' --fix",
     "lintAndFix": "yarn lint:main-fix && yarn lint:renderer-fix",
     "test": "tsc -p test && jest",
-    "test-compile": "webpack --progress --colors --config .electron-vue/webpack.test.config.js"
+    "pretest": "webpack --display minimal --config node_modules/electron-webpack/webpack.test.config.js"
   },
+  "repository": "electron-userland/electrify",
+  "//": "async-validator from iview depends on babel-runtime, so, we exclude it explicitly (todo - include only used parts of iview)",
   "build": {
-    "extends": ".electron-vue/electron-builder.yml",
     "productName": "Electrify",
-    "appId": "build.electron.electrify"
+    "appId": "build.electron.electrify",
+    "files": [
+      "!node_modules/babel-runtime{,/**/*}",
+      "!node_modules/core-js{,/**/*}",
+      "!node_modules/regenerator-runtime{,/**/*}",
+      "!node_modules/deep-diff/releases{,/**/*}",
+      "!node_modules/bluebird/js/browser{,/**/*}"
+    ]
+  },
+  "electronWebpack": {
+    "whiteListedModules": [
+      "iview"
+    ]
   },
   "dependencies": {
     "bluebird-lst": "^1.0.2",
@@ -36,47 +48,32 @@
     "iview": "^2.0.0-rc.18",
     "node-watch": "^0.5.5",
     "shell-env": "^0.3.0",
+    "source-map-support": "^0.4.15",
     "vue": "^2.3.4",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.7.0",
-    "vueify": "^9.4.1",
     "xstream": "^10.8.0"
   },
   "devDependencies": {
     "@types/jest": "^20.0.2",
     "babel-loader": "^7.1.1",
-    "babel-plugin-component": "^0.9.1",
+    "babel-plugin-component": "^0.10.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babili-webpack-plugin": "^0.1.2",
-    "chalk": "^2.0.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.4",
     "devtron": "^1.4.0",
     "electron": "1.7.4",
-    "electron-builder": "^19.13.0",
-    "electron-builder-tslint-config": "^1.0.1",
+    "electron-builder": "^19.15.2",
+    "electron-builder-tslint-config": "^1.0.3",
     "electron-devtools-installer": "^2.2.0",
-    "extract-text-webpack-plugin": "^3.0.0-beta.3",
-    "file-loader": "^0.11.2",
-    "fork-ts-checker-webpack-plugin": "^0.2.4",
-    "html-webpack-plugin": "^2.29.0",
+    "electron-webpack": "0.1.1",
+    "electron-webpack-ts": "^1.0.0",
+    "electron-webpack-vue": "^1.0.2",
     "jest-cli": "^20.0.4",
     "jest-environment-node-debug": "^2.0.0",
-    "json-loader": "^0.5.4",
-    "multispinner": "^0.2.1",
-    "style-loader": "^0.18.2",
-    "ts-loader": "^2.2.2",
-    "tslint": "^5.4.3",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
+    "tslint": "^5.5.0",
     "typescript": "^2.4.1",
-    "url-loader": "^0.5.9",
-    "vue-class-component": "^5.0.2",
-    "vue-html-loader": "^1.2.4",
-    "vue-loader": "^13.0.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.3.4",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0",
-    "webpack-hot-middleware": "^2.18.1"
+    "webpack": "^3.1.0"
   },
   "jest": {
     "roots": [
