--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "node node_modules/electron-webpack/dev-runner.js",
     "dev-server": "webpack-dev-server --config node_modules/electron-webpack/webpack.renderer.config.js",
     "compile": "webpack --env.production --progress --bail --config node_modules/electron-webpack/webpack.app.config.js",
+    "dll": "webpack --env.production --progress --bail --config node_modules/electron-webpack/webpack.renderer.dll.config.js",
     "dist-dir": "yarn compile && electron-builder --dir -c.compression=store -c.mac.identity=null",
     "dist": "yarn compile && electron-builder",
     "lint": "yarn lint:main && yarn lint:renderer",
@@ -18,7 +19,8 @@
     "lint:renderer-fix": "tslint -c ./node_modules/electron-builder-tslint-config/tslint.json -p src/renderer --exclude '**/*.js' --fix",
     "lintAndFix": "yarn lint:main-fix && yarn lint:renderer-fix",
     "test": "tsc -p test && jest",
-    "pretest": "webpack --display minimal --config node_modules/electron-webpack/webpack.test.config.js"
+    "pretest": "webpack --display minimal --config node_modules/electron-webpack/webpack.test.config.js",
+    "postinstall": "yarn dll"
   },
   "repository": "electron-userland/electrify",
   "build": {
@@ -28,6 +30,15 @@
       "!node_modules/deep-diff/releases{,/**/*}",
       "!node_modules/bluebird/js/browser{,/**/*}"
     ]
+  },
+  "electronWebpack": {
+    "renderer": {
+      "dll": [
+        "vue",
+        "iview/dist/styles/iview.css",
+        "iview/src/components/loading-bar"
+      ]
+    }
   },
   "dependencies": {
     "bluebird-lst": "^1.0.2",
@@ -44,17 +55,14 @@
   },
   "devDependencies": {
     "@types/jest": "^20.0.2",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-component": "^0.10.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "devtron": "^1.4.0",
     "electron": "1.7.4",
-    "electron-builder": "^19.15.2",
+    "electron-builder": "^19.16.0",
     "electron-builder-tslint-config": "^1.0.3",
     "electron-devtools-installer": "^2.2.0",
-    "electron-webpack": "0.2.3",
+    "electron-webpack": "0.3.0",
     "electron-webpack-ts": "^1.0.0",
-    "electron-webpack-vue": "^1.0.2",
+    "electron-webpack-vue": "^1.0.3",
     "iview": "^2.0.0-rc.18",
     "jest-cli": "^20.0.4",
     "jest-environment-node-debug": "^2.0.0",
@@ -63,9 +71,8 @@
     "tslint": "^5.5.0",
     "typescript": "^2.4.1",
     "vue": "^2.3.4",
-    "vue-electron": "^1.0.6",
     "vue-router": "^2.7.0",
-    "webpack": "3.1.0"
+    "webpack": "3.2.0"
   },
   "jest": {
     "roots": [
