perf: lazy calculate latest electron-builder version

--- a/package.json
+++ b/package.json
@@ -70,11 +70,10 @@
     "electron": "1.7.5",
     "electron-builder": "^19.17.0",
     "electron-builder-tslint-config": "^1.0.3",
-    "electron-devtools-installer": "^2.2.0",
-    "electron-webpack": "^0.6.1",
-    "electron-webpack-ts": "^1.0.2",
-    "electron-webpack-vue": "^1.0.4",
-    "iview": "^2.0.0-rc.19",
+    "electron-webpack": "^0.8.1",
+    "electron-webpack-ts": "^1.0.3",
+    "electron-webpack-vue": "^1.0.5",
+    "iview": "^2.0.0",
     "jest-cli": "^20.0.4",
     "jest-environment-node-debug": "^2.0.0",
     "less": "^2.7.2",
