WIP: project info

--- a/package.json
+++ b/package.json
@@ -52,37 +52,38 @@
     }
   },
   "dependencies": {
-    "bluebird-lst": "^1.0.2",
+    "bluebird-lst": "^1.0.3",
     "clone": "^2.1.1",
-    "debug": "^2.6.8",
+    "debug": "^3.0.0",
     "deep-diff": "^0.3.8",
-    "electron-debug": "^1.3.0",
+    "electron-debug": "^1.4.0",
     "electron-store": "^1.2.0",
     "fs-extra-p": "^4.4.0",
     "node-watch": "^0.5.5",
     "shell-env": "^0.3.0",
     "source-map-support": "^0.4.15",
+    "try-require": "^1.2.1",
     "xstream": "^10.9.0"
   },
   "devDependencies": {
-    "@types/jest": "^20.0.5",
+    "@types/jest": "^20.0.7",
     "devtron": "^1.4.0",
     "electron": "1.7.5",
-    "electron-builder": "^19.17.0",
+    "electron-builder": "^19.22.1",
     "electron-builder-tslint-config": "^1.0.3",
-    "electron-webpack": "^0.8.1",
+    "electron-webpack": "^0.11.1",
     "electron-webpack-ts": "^1.0.3",
-    "electron-webpack-vue": "^1.0.5",
-    "iview": "^2.0.0",
+    "electron-webpack-vue": "^1.0.6",
+    "iview": "^2.1.0",
     "jest-cli": "^20.0.4",
     "jest-environment-node-debug": "^2.0.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
-    "tslint": "^5.5.0",
+    "tslint": "^5.6.0",
     "typescript": "^2.4.2",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
-    "webpack": "3.4.1",
+    "webpack": "3.5.4",
     "webpack-build-notifier": "^0.1.16"
   },
   "jest": {
