--- a/package.json
+++ b/package.json
@@ -57,37 +57,40 @@
     "deep-diff": "^0.3.8",
     "electron-debug": "^1.5.0",
     "electron-store": "^1.3.0",
-    "fs-extra-p": "^4.5.0",
-    "node-watch": "^0.5.5",
+    "fs-extra-p": "^4.5.2",
+    "node-watch": "^0.5.7",
     "shell-env": "^1.0.0",
-    "source-map-support": "^0.5.2",
+    "source-map-support": "^0.5.3",
     "try-require": "^1.2.1",
-    "xstream": "^11.1.0"
+    "xstream": "^11.2.0"
   },
   "devDependencies": {
-    "@types/jest": "^22.0.1",
+    "@types/jest": "^22.1.3",
     "devtron": "^1.4.0",
-    "electron": "1.7.11",
-    "electron-builder": "^19.54.0",
+    "electron": "1.8.2",
+    "electron-builder": "^20.0.6",
     "electron-builder-tslint-config": "^1.1.0",
-    "electron-webpack": "^1.12.0",
-    "electron-webpack-ts": "^1.3.0",
-    "electron-webpack-vue": "^1.2.0",
-    "iview": "^2.8.0",
-    "jest-cli": "^22.1.4",
+    "electron-webpack": "^1.12.1",
+    "electron-webpack-ts": "^1.4.0",
+    "electron-webpack-vue": "^1.4.0",
+    "iview": "^2.9.2",
+    "jest-cli": "^22.3.0",
     "jest-environment-node-debug": "^2.0.0",
-    "less": "^2.7.3",
+    "less": "^3.0.1",
     "less-loader": "^4.0.5",
     "tslint": "^5.9.1",
-    "typescript": "^2.6.2",
+    "typescript": "^2.7.2",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
-    "webpack": "3.10.0",
+    "webpack": "3.11.0",
     "webpack-build-notifier": "^0.1.22"
   },
   "jest": {
     "roots": [
       "<rootDir>/test"
     ]
+  },
+  "resolutions": {
+    "webpack-sources": "1.0.1"
   }
 }
