--- a/package.json
+++ b/package.json
@@ -54,36 +54,36 @@
     "bluebird-lst": "^1.0.5",
     "clone": "^2.1.1",
     "debug": "^3.1.0",
-    "deep-diff": "^0.3.8",
+    "deep-diff": "^1.0.0",
     "electron-debug": "^1.5.0",
     "electron-store": "^1.3.0",
-    "fs-extra-p": "^4.5.2",
-    "node-watch": "^0.5.7",
+    "fs-extra-p": "^4.6.0",
+    "node-watch": "^0.5.8",
     "shell-env": "^1.0.0",
-    "source-map-support": "^0.5.3",
+    "source-map-support": "^0.5.5",
     "try-require": "^1.2.1",
     "xstream": "^11.2.0"
   },
   "devDependencies": {
-    "@types/jest": "^22.1.3",
+    "@types/jest": "^22.2.3",
     "devtron": "^1.4.0",
-    "electron": "1.8.2",
-    "electron-builder": "^20.0.6",
+    "electron": "2.0.0",
+    "electron-builder": "^20.11.1",
     "electron-builder-tslint-config": "^1.1.0",
-    "electron-webpack": "^1.12.1",
-    "electron-webpack-ts": "^1.4.0",
-    "electron-webpack-vue": "^1.4.0",
-    "iview": "^2.9.2",
-    "jest-cli": "^22.3.0",
+    "electron-webpack": "file:///Users/develar/Documents/electron-webpack/packages/electron-webpack",
+    "electron-webpack-ts": "^2.0.2",
+    "electron-webpack-vue": "^2.1.2",
+    "iview": "^2.13.1",
+    "jest-cli": "^22.4.3",
     "jest-environment-node-debug": "^2.0.0",
-    "less": "^3.0.1",
-    "less-loader": "^4.0.5",
-    "tslint": "^5.9.1",
-    "typescript": "^2.7.2",
-    "vue": "^2.5.13",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
+    "tslint": "^5.10.0",
+    "typescript": "^2.8.3",
+    "vue": "^2.5.16",
     "vue-router": "^3.0.1",
-    "webpack": "3.11.0",
-    "webpack-build-notifier": "^0.1.22"
+    "webpack": "4.8.1",
+    "webpack-build-notifier": "^0.1.25"
   },
   "jest": {
     "roots": [
